# mortal-treasures

./: Cargo.toml  README.md  build.rs  build_wasm.sh
pkg/world/: Cargo.toml
pkg/world/src/: lib.rs
src/: game.rs  lib.rs  main.rs  server.rs
src/game/: mod.rs  player.rs
static/: index.html  index.js
