[workspace]
members = [".", "pkg/*"]

[package]
name = "mortal-treasures"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.1", features = ["ws", "macros"] }
futures = "0.3.25"
indexmap = "1.9.2"
mortal-treasures-world = { version = "0.1.0", path = "pkg/world" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["v4"] }

[build-dependencies]
structopt = "0.3.26"
wasm-pack = { version = "0.10.3" }
